@@ -23,7 +23,7 @@ $ccExpYear = $block->getInfoData('cc_exp_year');?>
         </label>
         <div class="admin__field-control">
             <iframe data-ifields-id="card-number" data-ifields-placeholder="Card Number"
-                    src="https://cdn.cardknox.com/ifields/2.15.2211.1401/ifield.htm" frameBorder="0"
+                    src="https://cdn.cardknox.com/ifields/2.15.2302.0801/ifield.htm" frameBorder="0"
                     height="35"></iframe>
             <input data-ifields-id="card-number-token" name="payment[xCardNum]" type="hidden"/>
         </div>
@@ -62,7 +62,7 @@ $ccExpYear = $block->getInfoData('cc_exp_year');?>
             </label>
             <div class="admin__field-control">
                 <iframe data-ifields-id="cvv" data-ifields-placeholder="CVV"
-                        src="https://cdn.cardknox.com/ifields/2.15.2211.1401/ifield.htm" frameBorder="0"
+                        src="https://cdn.cardknox.com/ifields/2.15.2302.0801/ifield.htm" frameBorder="0"
                         height="35"></iframe>
                 <input data-ifields-id="cvv-token" name="payment[xCVV]" type="hidden"/>
                 <label id="ifieldsError" data-ifields-id="card-data-error"></label>
