@@ -32,7 +32,7 @@
                     </label>
                     <div class="control">
                         <iframe data-ifields-id="card-number" data-ifields-placeholder="Card Number"
-                                src="https://cdn.cardknox.com/ifields/2.15.2211.1401/ifield.htm" frameBorder="0"
+                                src="https://cdn.cardknox.com/ifields/2.15.2302.0801/ifield.htm" frameBorder="0"
                                 height="35"></iframe>
                         <input data-ifields-id="card-number-token" name="xCardNum" type="hidden">
                     </div>
@@ -80,7 +80,7 @@
                     </label>
                     <div class="control _with-tooltip">
                         <iframe data-ifields-id="cvv" data-ifields-placeholder="CVV"
-                        src="https://cdn.cardknox.com/ifields/2.15.2211.1401/ifield.htm" frameBorder="0"
+                        src="https://cdn.cardknox.com/ifields/2.15.2302.0801/ifield.htm" frameBorder="0"
                         height="35"></iframe>
                         <div class="field-tooltip toggle">
                             <span class="field-tooltip-action action-cvv"
